fix: Adjusted gap spacing between label and input

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ body,
 
 .book-information > form {
   display: grid;
+  gap: 10px;
 }
 
 .book-information > form > button {
